create tabs&index's header

--- a/app.json
+++ b/app.json
@@ -1,12 +1,46 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/publish/publish",
+    "pages/agency/agency",
+    "pages/mine/mine",
     "pages/logs/logs"
   ],
+  "tabBar":{
+    "list": [{
+      "selectedIconPath": "",
+      "iconPath": "",
+      "pagePath": "pages/index/index",
+      "text": "首页" 
+    },
+    {
+      "selectedIconPath": "",
+      "iconPath": "",
+      "pagePath": "pages/publish/publish",
+      "text": "发布"  
+    },
+    {
+      "selectedIconPath": "",
+      "iconPath": "",
+      "pagePath": "pages/agency/agency",
+      "text": "代理商"
+    },
+    {
+      "selectedIconPath": "",
+      "iconPath": "",
+      "pagePath": "pages/mine/mine",
+      "text": "我的"
+    }]
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarBackgroundColor": "#FF0000",
+    "navigationBarTitleText": "代理商供货系统",
     "navigationBarTextStyle":"black"
   }
 }
