--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/agencyCenter/agencyCenter",
     "pages/agencySignin/agencySignin",
     "pages/logs/logs",
     "pages/publishDetail/publishDetail",
@@ -11,13 +12,14 @@
     "pages/map/map",
     "pages/aboutUs/aboutUs",
     "pages/help/help",
-    "pages/agencyCenter/agencyCenter",
     "pages/agencyDetail/agencyDetail",
     "pages/location/location",
     "pages/nearbyAgencySignin/nearbyAgencySignin",
     "pages/search/search",
     "pages/goodsDetail/goodsDetail",
-    "pages/partner/partner"
+    "pages/partner/partner",
+    "pages/contactUs/contactUs",
+    "pages/publishSuccess/publishSuccess"
   ],
   "permission": {
     "scope.userLocation": {
