合伙人改为不收费，发布信息暂时不收费

--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
     "pages/goodsDetail/goodsDetail",
     "pages/partner/partner",
     "pages/contactUs/contactUs",
-    "pages/publishSuccess/publishSuccess"
+    "pages/publishSuccess/publishSuccess",
+    "pages/joinSuccess/joinSuccess"
   ],
   "permission": {
     "scope.userLocation": {
