--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
   ],
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+      "desc": "你的位置信息将用于获取周围商家信息"
     }
   },
   "tabBar": {
