--- a/app.json
+++ b/app.json
@@ -1,5 +1,10 @@
 {
   "pages": [
+    "pages/agencyUpdate/agencyUpdate",
+    "pages/goodsList/goodsList",
+    "pages/addCategory/addCategory",
+    "pages/addGoods/addGoods",
+    "pages/agencyCenter/agencyCenter",
     "pages/index/index",
     "pages/cashWithdrawalDetail/cashWithdrawalDetail",
     "pages/commission/commission",
@@ -8,7 +13,6 @@
     "pages/contactUs/contactUs",
     "pages/nearbyAgencySignin/nearbyAgencySignin",
     "pages/agencySignin/agencySignin",
-    "pages/agencyCenter/agencyCenter",
     "pages/publishSuccess/publishSuccess",
     "pages/logs/logs",
     "pages/publishDetail/publishDetail",
