-----分割线，新项目-----

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/productDetail/productDetail",
     "pages/agencyCenter/agencyCenter",
     "pages/addGoods/addGoods",
     "pages/goodsList/goodsList",
